--- a/custom_components/versatile_thermostat/translations/fr.json
+++ b/custom_components/versatile_thermostat/translations/fr.json
@@ -32,6 +32,7 @@
           "valve_regulation": "Configuration de la regulation par vanne",
           "sync_device_internal_temp": "Synchronisation de la température de l'appareil",
           "lock": "Gestion du verrouilage",
+          "heating_failure_detection": "Détection de panne de chauffage",
           "auto_tpi_1": "Auto TPI - Général",
           "auto_tpi_2": "Auto TPI - Méthode",
           "auto_tpi_3_avg": "Auto TPI - Moyenne",
@@ -91,7 +92,8 @@
           "use_power_feature": "Avec gestion de la puissance",
           "use_presence_feature": "Avec détection de présence",
           "use_central_boiler_feature": "Ajouter une chaudière centrale. Cochez pour ajouter un contrôle sur une chaudière centrale. Vous devrez ensuite configurer les VTherms qui commandent la chaudière centrale pour que cette option prenne effet. Si au moins un des VTherm a besoin de chauffer, la chaudière centrale sera activée. Si aucun VTherm n'a besoin de chauffer, elle sera éteinte. Les commandes pour allumer/éteindre la chaudière centrale sont données dans la page de configuration suivante.",
-          "use_auto_start_stop_feature": "Avec démarrage et extinction automatique"
+          "use_auto_start_stop_feature": "Avec démarrage et extinction automatique",
+          "use_heating_failure_detection_feature": "Avec détection de panne de chauffage"
         }
       },
       "type": {
@@ -350,6 +352,26 @@
           "sync_with_calibration": "Cochez pour appliquer le calibrage du décalage lors de la synchronisation de la température interne. Décochez pour copier directement la température vers les entités sélectionnées",
           "sync_entity_ids": "La liste des entités utilisées pour synchroniser la température interne des appareils sous-jacents. Il doit y en avoir une par appareil sous-jacent. Doit être une entité de calibrage si la case est cochée ou une entité de température sinon. Les deux sont des entités de type `number`."
         }
+      },
+      "heating_failure_detection": {
+        "title": "Détection de panne de chauffage",
+        "description": "Configuration de la détection de panne de chauffage. Cette fonctionnalité détecte les anomalies lorsque le chauffage est demandé mais que la température n'augmente pas, ou lorsque le chauffage est éteint mais que la température continue de monter.",
+        "data": {
+          "use_heating_failure_detection_feature": "Activer la détection de panne de chauffage",
+          "use_heating_failure_detection_central_config": "Utiliser la configuration centrale de détection de panne",
+          "heating_failure_threshold": "Seuil de panne de chauffage",
+          "cooling_failure_threshold": "Seuil de panne de refroidissement",
+          "heating_failure_detection_delay": "Délai de détection (minutes)",
+          "temperature_change_tolerance": "Tolérance (°C)"
+        },
+        "data_description": {
+          "use_heating_failure_detection_feature": "Activer la détection d'anomalies de chauffage pour les VTherms avec TPI",
+          "use_heating_failure_detection_central_config": "Cochez pour utiliser la configuration centrale de détection de panne. Décochez pour utiliser des paramètres spécifiques à ce VTherm",
+          "heating_failure_threshold": "Seuil de on_percent au-dessus duquel le chauffage devrait faire monter la température (0.9 = 90%)",
+          "cooling_failure_threshold": "Seuil de on_percent en-dessous duquel la température ne devrait pas augmenter (0.0 = 0%)",
+          "heating_failure_detection_delay": "Temps en minutes à attendre avant de vérifier si la température a évolué comme attendu",
+          "temperature_change_tolerance": "Variation minimale de température en degrés pour être considérée comme significative. Les variations plus petites sont ignorées pour filtrer le bruit des capteurs (défaut: 0.5°C)"
+        }
       }
     },
     "error": {
@@ -399,6 +421,7 @@
           "valve_regulation": "Configuration de la regulation par vanne",
           "sync_device_internal_temp": "Synchronisation de la température de l'appareil",
           "lock": "Verrouillage",
+          "heating_failure_detection": "Détection de panne de chauffage",
           "auto_tpi_1": "Auto TPI - Général",
           "auto_tpi_2": "Auto TPI - Méthode",
           "auto_tpi_3_avg": "Auto TPI - Moyenne",
@@ -458,7 +481,8 @@
           "use_power_feature": "Avec gestion de la puissance",
           "use_presence_feature": "Avec détection de présence",
           "use_central_boiler_feature": "Ajouter une chaudière centrale. Cochez pour ajouter un contrôle sur une chaudière centrale. Vous devrez ensuite configurer les VTherms qui commandent la chaudière centrale pour que cette option prenne effet. Si au moins un des VTherm a besoin de chauffer, la chaudière centrale sera activée. Si aucun VTherm n'a besoin de chauffer, elle sera éteinte. Les commandes pour allumer/éteindre la chaudière centrale sont données dans la page de configuration suivante.",
-          "use_auto_start_stop_feature": "Avec démarrage et extinction automatique"
+          "use_auto_start_stop_feature": "Avec démarrage et extinction automatique",
+          "use_heating_failure_detection_feature": "Avec détection de panne de chauffage"
         }
       },
       "type": {
@@ -720,6 +744,26 @@
           "sync_with_calibration": "Cochez pour appliquer le calibrage du décalage lors de la synchronisation de la température interne. Décochez pour copier directement la température vers les entités sélectionnées",
           "sync_entity_ids": "La liste des entités utilisées pour synchroniser la température interne des appareils sous-jacents. Il doit y en avoir une par appareil sous-jacent. Doit être une entité de calibrage si la case est cochée ou une entité de température sinon. Les deux sont des entités de type `number`."
         }
+      },
+      "heating_failure_detection": {
+        "title": "Détection de panne de chauffage - {name}",
+        "description": "Configuration de la détection de panne de chauffage. Cette fonctionnalité détecte les anomalies lorsque le chauffage est demandé mais que la température n'augmente pas, ou lorsque le chauffage est éteint mais que la température continue de monter.",
+        "data": {
+          "use_heating_failure_detection_feature": "Activer la détection de panne de chauffage",
+          "use_heating_failure_detection_central_config": "Utiliser la configuration centrale de détection de panne",
+          "heating_failure_threshold": "Seuil de panne de chauffage",
+          "cooling_failure_threshold": "Seuil de panne de refroidissement",
+          "heating_failure_detection_delay": "Délai de détection (minutes)",
+          "temperature_change_tolerance": "Tolérance (°C)"
+        },
+        "data_description": {
+          "use_heating_failure_detection_feature": "Activer la détection d'anomalies de chauffage pour les VTherms avec TPI",
+          "use_heating_failure_detection_central_config": "Cochez pour utiliser la configuration centrale de détection de panne. Décochez pour utiliser des paramètres spécifiques à ce VTherm",
+          "heating_failure_threshold": "Seuil de on_percent au-dessus duquel le chauffage devrait faire monter la température (0.9 = 90%)",
+          "cooling_failure_threshold": "Seuil de on_percent en-dessous duquel la température ne devrait pas augmenter (0.0 = 0%)",
+          "heating_failure_detection_delay": "Temps en minutes à attendre avant de vérifier si la température a évolué comme attendu",
+          "temperature_change_tolerance": "Variation minimale de température en degrés pour être considérée comme significative. Les variations plus petites sont ignorées pour filtrer le bruit des capteurs (défaut: 0.5°C)"
+        }
       }
     },
     "error": {
@@ -811,6 +855,32 @@
             }
           }
         }
+      }
+    },
+    "binary_sensor": {
+      "safety_state": {
+        "name": "État de sécurité"
+      },
+      "heating_failure_state": {
+        "name": "État d'anomalie de chauffe"
+      },
+      "overpowering_state": {
+        "name": "État de délestage"
+      },
+      "window_state": {
+        "name": "État de la fenêtre"
+      },
+      "motion_state": {
+        "name": "État de mouvement"
+      },
+      "presence_state": {
+        "name": "État de présence"
+      },
+      "window_bypass_state": {
+        "name": "Bypass fenêtre"
+      },
+      "central_boiler_state": {
+        "name": "Chaudière centrale"
       }
     },
     "number": {
