--- a/custom_components/versatile_thermostat/translations/pl.json
+++ b/custom_components/versatile_thermostat/translations/pl.json
@@ -1,10 +1,11 @@
 {
   "title": "Termostat VTherm",
   "config": {
-    "flow_title": "Konfiguracja Termostatu VTherm",
+    "flow_title": "Konfiguracja termostatu VTherm",
     "step": {
       "user": {
-        "title": "Typ Termostatu VTherm",
+        "title": "Typ termostatu VTherm",
+        "description": "Wybierz typ termostatu, który chcesz utworzyć&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/pl/creation.md)",		
         "data": {
           "thermostat_type": "Typ termostatu"
         },
@@ -45,12 +46,11 @@
           "lock_automations": "Blokada uniemożliwi wykonywanie poleceń przez automatyzacje i integracje (np. harmonogram)"
         },
         "data_description": {
-          "use_lock_central_config": "Zaznacz, aby używać centralnej konfiguracji blokady. Odznacz, aby używać konfiguracji blokady dedykowanej dla tego termostatu VTherm",
-          "lock_code": "Kod PIN do odblokowania termostatu (4 cyfry)"
+          "use_lock_central_config": "Zaznacz, aby używać centralnej konfiguracji blokady. Odznacz, aby używać konfiguracji blokady dedykowanej dla tego termostatu VTherm"
         }
       },
       "main": {
-        "title": "Dodaj nowy Termostat VTherm",
+        "title": "Dodaj nowy termostat VTherm",
         "description": "Wymagane atrybuty podstawowe&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/pl/base-attributes.md)",
         "data": {
           "name": "Nazwa",
@@ -64,7 +64,7 @@
           "step_temperature": "Krok temperatury",
           "device_power": "Moc urządzenia",
           "use_central_mode": "Załączenie sterowania przez encję centralną (wymaga konfiguracji centralnej). Zaznacz, aby załączyć sterowanie termostatu wybranymi encjami.",
-          "use_main_central_config": "Użyj dodatkowej konfiguracji centralnej. Zaznacz, aby korzystać z podstawowej konfiguracji centralnej (temperatura zewnętrzna, min, max, krok, ...).",
+          "use_main_central_config": "Użyj dodatkowej konfiguracji centralnej. Zaznacz, aby korzystać z podstawowej konfiguracji centralnej (temperatura zewnętrzna, min, max, krok, itp.).",
           "used_by_controls_central_boiler": "Używane przez kocioł centralny. Zaznacz, jeśli termostat ma sterować kotłem centralnym."
         },
         "data_description": {
@@ -134,7 +134,8 @@
           "tpi_threshold_high": "Wysoki próg TPI",
           "use_tpi_central_config": "Użyj centralnej konfiguracji TPI",
           "minimal_activation_delay": "Minimalna zwłoka czasowa aktywacji",
-          "minimal_deactivation_delay": "Minimalna zwłoka czasowa deaktywacji"
+          "minimal_deactivation_delay": "Minimalna zwłoka czasowa deaktywacji",
+          "auto_tpi_mode": "Aktywuj naukę Auto TPI"
         },
         "data_description": {
           "tpi_coef_int": "Współczynnik do zastosowania w przypadku delty temperatury wewnętrznej",
@@ -143,7 +144,8 @@
           "tpi_threshold_high": "Próg w °, powyżej którego algorytm TPI będzie nieaktywny. 0 oznacza brak progu.",
           "use_tpi_central_config": "Zaznacz, aby używać centralnej konfiguracji TPI. Odznacz, aby używać konfiguracji TPI dedykowanej wyłącznie dla tego termostatu",
           "minimal_activation_delay": "Zwłoka (w sek.), w czasie której urządzenie nie zostanie aktywowane",
-          "minimal_deactivation_delay": "Zwłoka (w sek.), w czasie której urządzenie będzie utrzymywane w stanie gotowości"
+          "minimal_deactivation_delay": "Zwłoka (w sek.), w czasie której urządzenie będzie utrzymywane w stanie gotowości",
+          "auto_tpi_mode": "Zaznacz, aby aktywować naukę wpółczynników TPI"
         }
       },
       "presets": {
@@ -225,7 +227,7 @@
         }
       },
       "advanced": {
-        "title": "Zaawansowane parametry",
+        "title": "Parametry zaawansowane",
         "description": "Konfiguracja parametrów zaawansowanych. Pozostaw wartości domyślne, jeśli nie wiesz, co zrobić.\nNieprawidłowa zmiana tych parametrów może prowadzić do błędnej kontroli temperatur lub błędnej regulacji mocy&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/pl/feature-advanced.md)",
         "data": {
           "safety_delay_min": "Zwłoka trybu bezpiecznego (w min.)",
@@ -277,15 +279,15 @@
         }
       },
       "sync_device_internal_temp": {
-        "title": "Synchronize device internal temperature",
-        "description": "Configuration to synchronize the internal temperature of the underlying devices with selected entities&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/pl/feature-sync_device_temp.md)",
+        "title": "Synchronizuj wewnętrzną temperaturę urządzenia",
+        "description": "Konfiguracja umożliwiająca synchronizację temperatury wewnętrznej urządzeń bazowych z wybranymi encjami&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/pl/feature-sync_device_temp.md)",
         "data": {
-          "sync_with_calibration": "Apply offset calibration",
-          "sync_entity_ids": "Entities id used for synchronization"
+          "sync_with_calibration": "Zastosuj kalibrację offsetu",
+          "sync_entity_ids": "Identyfikatory encji używanych w synchronizacji"
         },
         "data_description": {
-          "sync_with_calibration": "Check to apply the offset calibration when synchronizing the internal temperature. Uncheck to directly copy the temperature from the selected entities",
-          "sync_entity_ids": "The list of the entities used to synchronize the internal temperature of the underlying devices. There should be one per underlying device. Should be a calibration entity if checkbox is selected or a temperature entity otherwise. Both are `number` entities."
+          "sync_with_calibration": "Zaznacz, aby zastosować kalibrację offsetu podczas synchronizacji temperatury wewnętrznej. Odznacz, aby skopiować temperaturę bezpośrednio z wybranych encji.",
+          "sync_entity_ids": "Lista encji używanych do synchronizacji temperatury wewnętrznej urządzeń bazowych. Każde urządzenie bazowe musi mieć jedną taką encję. Jeśli pole wyboru jest zaznaczone, powinna to być encja kalibracji. W przeciwnym razie powinna to być encja temperatury. Obie encje mają typ numeryczny `number`."
         }
       }
     },
@@ -304,10 +306,11 @@
     }
   },
   "options": {
-    "flow_title": "Konfiguracja Termostatu VTherm",
+    "flow_title": "Konfiguracja termostatu VTherm",
     "step": {
       "user": {
         "title": "Typ - {name}",
+		"description": "Wybierz typ termostatu, który chcesz utworzyć&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/pl/creation.md)",
         "data": {
           "thermostat_type": "Typ termostatu"
         },
@@ -334,6 +337,10 @@
           "valve_regulation": "Konfiguracja regulacji zaworu",
           "sync_device_internal_temp": "Synchronizacja temperatury urządzenia",
           "lock": "Blokada",
+          "auto_tpi_1": "Auto TPI - Ogólne",
+          "auto_tpi_2": "Auto TPI - Metoda",
+          "auto_tpi_3_avg": "Auto TPI - Średnia",
+          "auto_tpi_3_ema": "Auto TPI - EMA",
           "finalize": "Wszystko zrobione",
           "configuration_not_complete": "Konfiguracja niekompletna"
         }
@@ -343,6 +350,7 @@
         "description": "Funkcja blokady zapobiega modyfikacjom termostatu z interfejsu użytkownika lub automatyzacji, jednocześnie utrzymując termostat w stanie pracy.",
         "data": {
           "use_lock_central_config": "Użyj centralnej konfiguracji blokady",
+		  "lock_code": "Opcjonalny kod PIN (4 cyfry)",
           "lock_users": "Blokada uniemożliwi polecenia użytkowników",
           "lock_automations": "Blokada uniemożliwi polecenia z automatyzacji i integracji (np. harmonogram)"
         },
@@ -365,7 +373,7 @@
           "step_temperature": "Krok temperatury",
           "device_power": "Moc urządzenia",
           "use_central_mode": "Załączenie sterowania przez encję główną (wymaga konfiguracji centralnej). Zaznacz, aby załączyć sterowanie termostatu wybranymi encjami.",
-          "use_main_central_config": "Użyj dodatkowej konfiguracji centralnej. Zaznacz, aby używać konfiguracji centralnej (temperatura zewnętrzna, min, max, krok, ...).",
+          "use_main_central_config": "Użyj dodatkowej konfiguracji centralnej. Zaznacz, aby używać konfiguracji centralnej (temperatura zewnętrzna, min, max, krok, itp.).",
           "used_by_controls_central_boiler": "Używane przez kocioł centralny. Zaznacz, jeśli ten termostat powinien sterować kotłem centralnym"
         },
         "data_description": {
@@ -435,7 +443,8 @@
           "tpi_threshold_high": "Wysoki próg TPI",
           "use_tpi_central_config": "Użyj centralnej konfiguracji TPI",
           "minimal_activation_delay": "Minimalna zwłoka czasowa aktywacji",
-          "minimal_deactivation_delay": "Minimalna zwłoka czasowa deaktywacji"
+          "minimal_deactivation_delay": "Minimalna zwłoka czasowa deaktywacji",
+          "auto_tpi_mode": "Aktywuj naukę Auto TPI"		  
         },
         "data_description": {
           "tpi_coef_int": "Współczynnik do zastosowania w przypadku delty temperatury wewnętrznej",
@@ -581,16 +590,60 @@
           "max_closing_degree": "Maksymalna wartość stopnia zamknięcia zaworu. Powyżej tej wartości zawór nigdy nie zostanie zamknięty. Ustaw wartość tego parametru na `100`, aby całkowicie zamknąć zawór, jeśli ogrzewanie jest już niepotrzebne"
         }
       },
-      "sync_device_internal_temp": {
-        "title": "Synchronize device internal temperature",
-        "description": "Configuration to synchronize the internal temperature of the underlying devices with selected entities&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/pl/feature-sync_device_temp.md)",
+      "auto_tpi_1": {
+        "title": "Auto TPI - Ogólne - {name}",
+        "description": "Ogólne parametry nauki Auto TPI.",
         "data": {
-          "sync_with_calibration": "Apply offset calibration",
-          "sync_entity_ids": "Entities id used for synchronization"
+          "auto_tpi_enable_update_config": "Aktualizuj konfigurację",
+          "auto_tpi_enable_notification": "Powiadomienia",
+          "auto_tpi_keep_ext_learning": "Kontynuuj naukę współczynnika zewnętrznego",
+          "auto_tpi_continuous_learning": "Ciągłe uczenie",
+          "heater_heating_time": "Czas nagrzewania się grzejnika (w min.)",
+          "heater_cooling_time": "Czas wychładzania się grzejnika (w min.)",
+          "auto_tpi_max_coef_int": "Maksymalna wartość współczynnika wewnętrznego",
+          "auto_tpi_heating_rate": "Szybkość nagrzewania (°C/h)",
+          "auto_tpi_cooling_rate": "Szybkość wystudzania (°C/h)"
         },
         "data_description": {
-          "sync_with_calibration": "Check to apply the offset calibration when synchronizing the internal temperature. Uncheck to directly copy the temperature from the selected entities",
-          "sync_entity_ids": "The list of the entities used to synchronize the internal temperature of the underlying devices. There should be one per underlying device. Should be a calibration entity if checkbox is selected or a temperature entity otherwise. Both are `number` entities."
+          "auto_tpi_enable_update_config": "Automatycznie aktualizuj konfigurację o wyuczone współczynniki",
+          "auto_tpi_enable_notification": "Wyślij powiadomienie, gdy nauka zostanie zakończona",
+          "auto_tpi_keep_ext_learning": "Nauka wpółczynnika zewnętrznego będzie kontynuowana nawet po osiągnieciu 50 cykli, dopóki współczynnik wewnętrzny nie ustabilizuje się.",
+          "auto_tpi_continuous_learning": "Po zakończeniu procesu nauki system będzie obliczał i aplikował w tle nowe wartości współczynników (zalecana metoda EMA).",
+          "heater_heating_time": "Czas osiągnięcia pełnej mocy (w min.)",
+          "heater_cooling_time": "Czas wychłodzenia po zatrzymaniu (w min.)",
+          "auto_tpi_max_coef_int": "Maksymalna dopuszczalna wartość współczynnika wewnętrznego"
+        }
+      },
+      "auto_tpi_2": {
+        "title": "Auto TPI - Metoda - {name}",
+        "description": "Wybierz metodę obliczeniową dla procesu uczenia.",
+        "data": {
+          "auto_tpi_calculation_method": "Metoda obliczeniowa"
+        },
+        "data_description": {
+          "auto_tpi_calculation_method": "Średnia: proste uśrednianie. EMA: Zmienna Średnia Wykładnicza (preferuje niedawne wartości)"
+        }
+      },
+      "auto_tpi_3_avg": {
+        "title": "Auto TPI - Średnia - {name}",
+        "description": "Parametry metody uśredniania.",
+        "data": {
+          "auto_tpi_avg_initial_weight": "Waga początkowa"
+        },
+        "data_description": {
+          "auto_tpi_avg_initial_weight": "Waga początkowej/poprzedniej wartości w obliczaniu średniej"
+        }
+      },
+      "auto_tpi_3_ema": {
+        "title": "Auto TPI - EMA - {name}",
+        "description": "Parametry metody EMA.\n\nZalecenia:\n| Sytuacja | Alfa (ema_alpha) | Tempo rozkładu (ema_decay_rate) |\n| :--- | :--- | :--- |\n| Początkowe uczenie | 0.15 | 0.08 |\n| Dokładne uczenie | 0.08 | 0.12 |\n| Ciągłe uczenie | 0.05 | 0.02 |",
+        "data": {
+          "auto_tpi_ema_alpha": "Alfa",
+          "auto_tpi_ema_decay_rate": "Wpółczynnik rozkładu"
+        },
+        "data_description": {
+          "auto_tpi_ema_alpha": "Współczynnik wygładzania (0-1). Im wyższy, tym szybsza adaptacja",
+          "auto_tpi_ema_decay_rate": "Tempo, w jakim rozkład alfa maleje w czasie (stabilizacja)"
         }
       }
     },
@@ -598,11 +651,11 @@
       "unknown": "Nieoczekiwany błąd",
       "unknown_entity": "Nieznany identyfikator encji",
       "window_open_detection_method": "Może być używana tylko jedna metoda detekcji otwarcia okna. Użyj sensora okna lub automatycznej detekcji przekroczenia progu temperatury, ale nie używaj obu tych metod jednocześnie.",
-      "no_central_config": "Nie możesz wybrać konfiguracji centralnej, ponieważ jej nie znaleziono. Aby jej użyć, najpierw musisz utworzyć Termostat VTherm typu `Konfiguracja Centralna`.",
+      "no_central_config": "Nie możesz wybrać konfiguracji centralnej z powodu jej braku. Aby jej użyć, najpierw musisz utworzyć termostat VTherm typu `Konfiguracja Centralna`.",
       "service_configuration_format": "Błędny format konfiguracji polecenia lub usługi",
       "valve_regulation_nb_entities_incorrect": "Liczba encji zaworu wymagana do jego regulacji powinna być równa ilości zaworów",
-      "sync_device_internal_temp_nb_entities_incorrect": "The number of entities for synchronize device internal temperature should be equal to the number of underlyings",
-      "min_opening_degrees_format": "Oczekiwany separator przecinkowy listy lub dodatnia liczba całkowita. Przykład: 20, 25, 30"
+      "min_opening_degrees_format": "Oczekiwany separator przecinkowy listy lub dodatnia liczba całkowita. Przykład: 20, 25, 30",
+      "vswitch_configuration_incorrect": "Błąd konfiguracji poleceń własnych. Wymagane są one dla urządzeń nie będących przełącznikami. Ich format musi być następujący: `service_name[/attribute:value]`. Więcej informacji znajdziesz w dokumentacji"	  
     },
     "abort": {
       "already_configured": "Urządzenie jest już skonfigurowane"
@@ -660,6 +713,12 @@
         "auto_start_stop_slow": "Powolna detekcja",
         "auto_start_stop_medium": "Średnia detekcja",
         "auto_start_stop_fast": "Szybka detekcja"
+      }
+    },
+    "auto_tpi_calculation_method": {
+      "options": {
+        "average": "Średnia",
+        "ema": "Zmienna Średnia Wykładnicza (EMA)"
       }
     }
   },
@@ -724,6 +783,99 @@
       "boost_ac_away_temp": {
         "name": "Boost AC poza domem"
       }
+    }
+  },
+  "services": {
+    "set_auto_tpi_mode": {
+      "name": "Tryb Auto TPI",
+      "description": "Załącz lub wyłącz tryb nauki Auto TPI",
+      "fields": {
+        "auto_tpi_mode": {
+          "name": "Tryb Auto TPI",
+          "description": "Załącza (`true`) lub wyłącza (`false`) proces uczenia Auto TPI"
+        },
+        "reinitialise": {
+          "name": "Zresetuj dane wyuczone",
+          "description": "Resetuje wszystkie dane wyuczone podczas aktywności trybu Auto TPI (domyślnie `true`)"
+        }
+      }
+    },
+    "reset_auto_tpi_capacities": {
+      "name": "Reset wydajności Auto TPI",
+      "description": "Zresetuj zapamiętane maksymalne wydajności grzania i chłodzenia do 1,0 °C/h. Zapamiętane współczynniki NIE są resetowane."
+    },
+    "auto_tpi_calibrate_capacity": {
+      "name": "Kalibracja wydajności Auto TPI",
+      "description": "Skalibruj wydajność ogrzewania/chłodzenia (w °C/godzinę) za pomocą regresji liniowej na danych historycznych obiektu. Wyuczone współczynniki NIE są aktualizowane.",
+      "fields": {
+        "start_date": {
+          "name": "Historia od dnia",
+          "description": "Data, od której ma zostać pobrana historia (domyślnie: 30 dni temu)."
+        },
+        "end_date": {
+          "name": "Historia do dnia",
+          "description": "Data, do której ma zostać pobrana historia (domyślnie: dzisiaj)."
+        },
+        "hvac_mode": {
+          "name": "Tryb HVAC",
+          "description": "Który tryb ma być kalibrowany (grzanie lub chłodzenie)."
+        },
+        "save_to_config": {
+          "name": "Zapis w konfiguracji",
+          "description": "Zastosuj obliczone wydajności do konfiguracji Auto TPI."
+        },
+        "min_power_threshold": {
+          "name": "Próg mocy minimalnej",
+          "description": "Minimalny procent mocy, przy którym cykl jest uznawany za nasycony (domyślnie: 95%). Niższe wartości uwzględniają więcej cykli, ale mogą być mniej dokładne."
+        }
+      }
+    },
+    "set_tpi_parameters": {
+      "name": "Ustawienia parametrów TPI",
+      "description": "Zmień parametry TPI",
+      "fields": {
+        "minimal_activation_delay": {
+          "name": "Minimalna zwłoka aktywacji",
+          "description": "Zwłoka (w sek.) aktywacji urządzeń"
+        },
+        "minimal_deactivation_delay": {
+          "name": "Minimalna zwłoka deaktywacji",
+          "description": "Zwłoka (w sek.) deaktywacji urządzeń (czas podtrzymania działania)"
+        },
+        "tpi_threshold_low": {
+          "name": "Dolny próg TPI",
+          "description": "Próg w °, poniżej którego algorytm TPI zostanie załączony. `0` oznacza brak progu."
+        },
+        "tpi_threshold_high": {
+          "name": "Górny próg TPI",
+          "description": "Próg w °, powyżej którego algorytm TPI zostanie wyłączony. `0` oznacza brak progu."
+        }
+      }
+    },
+    "lock": {
+      "name": "Blokada",
+      "description": "Blokada termostatu przed zmianą jego konfiguracji przez użytkownika lub automatyzacje.",
+      "fields": {
+        "code": {
+          "name": "Kod blokady",
+          "description": "Opcjonalny kod blokady"
+        }
+      }
+    },
+    "unlock": {
+      "name": "Odblokowanie",
+      "description": "Odblokowuje termostat, umozliwiając zmianę jego konfiguracji.",
+      "fields": {
+        "code": {
+          "name": "Kod blokady",
+          "description": "Opcjonalny kod blokady"
+        }
+      }
+    }
+  },
+  "exceptions": {
+    "auto_tpi_learning_stopped": {
+      "message": "Nauka Auto TPI dla {name} została zatrzymana z powodu 3-ech kolejnych błędów. Powód: {reason}. Sprawdź swoją konfigurację."
     }
   }
 }
